openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cloudops-app
  name: cloudops-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloudops-app
  strategy: {}
  template:
    metadata:
      labels:
        app: cloudops-app
    spec:
      containers:
      - image: anilnodagala/cloudops-app:openshift-v1
        name: cloudops-app
        ports:
        - containerPort: 5000
        resources: 
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 250m
            memory: 256Mi
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health 
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 20
      
          
          
          

        
status: {}
