openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cloudops-service
  name: cloudops-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: cloudops-app
  type: ClusterIP
status:
  loadBalancer: {}
