openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cloudops-route
spec:
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: ""
    name: cloudops-service
    weight: null
status: {}
